Fixed IE6 layout bug

--- a/css/LeftAndMain_Subsites.css
+++ b/css/LeftAndMain_Subsites.css
@@ -32,9 +32,6 @@
 	color: #FFF;
 }
 
-#top {
-	position: relative;
-}
 #top #MainMenu #Menu-help {
 	margin-right: 260px;
 }
